errors/previous/trajcbert_on_gpu_1_2_batch_size_16_4_DAYS_1_5_dataset-19853939.err
  File "/home/daril/trajcbert/parallelisation_gpu_train_full.py", line 146
    def _validate(self):
                        ^
IndentationError: unindent does not match any outer indentation level
